SMAINV - fixed column alignment
 fixed column alignment per wilson's feedback

--- a/Customer Interface/css/SmartInventory.css
+++ b/Customer Interface/css/SmartInventory.css
@@ -230,6 +230,14 @@ table {
     text-align: left;
 }
 
+table#sandwichIngredients th,
+table#sandwichIngredients td,
+table#smoothieIngredients th,
+table#smoothieIngredients td {
+    width: 20%;
+    box-sizing: border-box;
+}
+
 table thead th {
     background-color: #f4f4f4;
     font-weight: bold;
